Added mockup viewing to poster generation pipeline
- After poster is generated, page redirects to mockup of poster.

--- a/backend/public/photopea-wrapper.html
+++ b/backend/public/photopea-wrapper.html
@@ -1,55 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Photopea Wrapper</title>
-  </head>
-  <body>
-    <iframe
-      id="pp"
-      src="https://www.photopea.com/#"
-      style="width: 1000px; height: 800px; border: none"
-    ></iframe>
 
-    <script>
-      const params = new URLSearchParams(window.location.search);
-      const psdUrl = params.get("psd");
-      const delay = (ms) => new Promise((r) => setTimeout(r, ms));
-      const iframe = document.getElementById("pp");
-      const ppWindow = iframe.contentWindow;
+<head>
+  <meta charset="UTF-8" />
+  <title>Photopea Wrapper</title>
+</head>
 
-      // Wait for export and send result back to Puppeteer
-      window.addEventListener("message", function (e) {
-  if (e.data instanceof ArrayBuffer) {
-    // ✅ Only accept the first image export
-    if (!window._exportedPoster) {
-      console.log("[Wrapper] Received PNG ArrayBuffer");
-      window._exportedPoster = Array.from(new Uint8Array(e.data));
-    } else {
-      console.log("[Wrapper] ⚠️ Duplicate PNG ignored");
-    }
-  } else {
-    // Optional: log unexpected non-ArrayBuffer messages
-    console.log("[Wrapper] Ignored message:", typeof e.data, e.data);
-  }
-});
+<body>
+  <iframe id="pp" src="https://www.photopea.com/#" style="width: 1000px; height: 800px; border: none"></iframe>
 
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const psdUrl = params.get("psd");
+    const userImageUrl = params.get("userImageUrl");
+    const description = params.get("description");
+    const instagram = params.get("instagramHandle");
+    const carMake = params.get("carMake").toUpperCase();
+    const carModel = params.get("carModel").toUpperCase();
+    const carYear = params.get("carYear");
+    const date = params.get("date");
+    const delay = (ms) => new Promise((r) => setTimeout(r, ms));
+    const iframe = document.getElementById("pp");
+    const ppWindow = iframe.contentWindow;
 
-      // Trigger Photopea commands
-      async function runScript() {
-        console.log("[Wrapper] Waiting for iframe to settle...");
-        await delay(4000);
-
-        console.log("[Wrapper] Loading PSD...");
-        ppWindow.postMessage(`app.open("${psdUrl}", null, true);`, "*");
-
-        await delay(8000);
-
-        console.log("[Wrapper] Exporting...");
-        ppWindow.postMessage(`app.activeDocument.saveToOE("png");`, "*");
+    // Wait for export and send result back to Puppeteer
+    window.addEventListener("message", function (e) {
+      if (e.data instanceof ArrayBuffer) {
+        // ✅ Only accept the first image export
+        if (!window._exportedPoster) {
+          console.log("[Wrapper] Received PNG ArrayBuffer");
+          window._exportedPoster = Array.from(new Uint8Array(e.data));
+        } else {
+          console.log("[Wrapper] ⚠️ Duplicate PNG ignored");
+        }
+      } else {
+        // Optional: log unexpected non-ArrayBuffer messages
+        // console.log("[Wrapper] Ignored message:", typeof e.data, e.data); // note necessary
+        if (e.data === "done") {
+          console.log("done");
+        }
       }
+    });
 
-      runScript();
-    </script>
-  </body>
+
+
+    // Functions:
+    function sendToPhotopea(line) {
+      ppWindow.postMessage(line, "*");
+    }
+
+    function waitForDone(doneLimit, timeoutMs = 10000) {
+      return new Promise((resolve, reject) => {
+        let doneCount = 0;
+        let timeoutId;
+
+        window.addEventListener("message", function listener(e) {
+          if (typeof event.data !== "string") return;
+
+          if (event.data.includes("done")) {
+            doneCount++;
+            if (doneCount === doneLimit) {
+              clearTimeout(timeoutId);
+              console.log(`Received "done" ${doneCount} times`);
+              window.removeEventListener("message", listener);
+              resolve();
+            }
+          }
+        });
+
+        // Timeout fallback
+        timeoutId = setTimeout(() => {
+          window.removeEventListener("message", listener);
+          //reject(new Error('"done" was not received ${doneLimit} times within the timeout.'));
+          console.log(`"done" was not received ${doneLimit} times within the timeout.`);
+        }, timeoutMs);
+      });
+    }
+
+
+
+
+    // Trigger Photopea commands
+    async function runScript() {
+      console.log("[Wrapper] Waiting for iframe to settle...");
+      await delay(3000);
+
+      // Stage 1: Open psd
+      console.log("[Wrapper] Loading PSD...");
+      ppWindow.postMessage(`app.open("${psdUrl}", null, true);`, "*");
+      await waitForDone(2);
+      console.log("[Wrapper] PSD loaded and ready");
+      //await delay(8000);
+
+
+      // Stage 2: Update variables:
+      const updateVariables = [
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="make"){l.textItem.contents="${carMake}"; console.log("Updated make!"); q=[];break;}if(l.layers)q.push(l);}}`,
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="model"){l.textItem.contents="${carModel}"; console.log("Updated model!"); q=[];break;}if(l.layers)q.push(l);}}`,
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="year"){l.textItem.contents="${carYear}"; console.log("Updated year!"); q=[];break;}if(l.layers)q.push(l);}}`,
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="description"){l.textItem.contents="${description}"; console.log("Updated description!"); q=[];break;}if(l.layers)q.push(l);}}`,
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="date"){l.textItem.contents="${date}"; console.log("Updated date!"); q=[];break;}if(l.layers)q.push(l);}}`,
+        `var q=[app.activeDocument];while(q.length){var g=q.pop();for(var i=0;i<g.layers.length;i++){var l=g.layers[i];if(l.name=="instagram"){l.textItem.contents="${instagram}"; console.log("Updated instagram!"); q=[];break;}if(l.layers)q.push(l);}}`,
+      ];
+
+      const combinedScript = updateVariables.join("\n");
+      console.log("[Wrapper] Updating variables...");
+      ppWindow.postMessage(combinedScript, "*");
+      await waitForDone(1);
+      console.log("[Wrapper] Updated variables! Continuing...");
+
+
+      // Stage 3: Place user image
+      sendToPhotopea(`app.open("${userImageUrl}", null, true);`);
+      await delay(1500);
+      console.log("[Wrapper] Pasted image! Continuing...");
+      sendToPhotopea(`
+          // Step 1: Get the most recent document (user image)
+          var imageDoc = app.activeDocument;
+          //console.log("Documents: " + app.documents.length); // testing
+          console.log("Image document: " + imageDoc.name);
+
+          // Step 2: Capture the main (template) document
+          var mainDoc = app.documents[0];
+          //console.log("Main document: " + mainDoc.name); // testing
+          //console.log("Active document: " + app.activeDocument.name); // testing
+
+          // Step 3: Make sure the layer is visible and unlocked
+          imageDoc.activeLayer.visible = true;
+          imageDoc.activeLayer.locked = false;
+
+          // Step 4: Select all and copy
+          imageDoc.selection.selectAll();
+          imageDoc.selection.copy(true); // 'true' forces the copy, but still needs something selected
+
+          // Step 5: Close image document
+          imageDoc.close(SaveOptions.DONOTSAVECHANGES);
+          console.log("Image copied and imageDoc closed!");
+
+          // Step 6: Switch back to the template and paste
+          app.activeDocument = mainDoc;
+          mainDoc.paste();
+          var pastedLayer = mainDoc.activeLayer;
+          console.log("Image pasted!");
+
+
+          // Find bottom layer
+          var bottomLayer = null;
+          for (var i = mainDoc.layers.length - 1; i >= 0; i--) {
+            if (mainDoc.layers[i].name === "Layer 0") {
+              bottomLayer = mainDoc.layers[i];
+              break;
+            }
+          }
+          console.log("Layer found:", bottomLayer.name);
+
+          // Resize to fit
+          var bl = bottomLayer.bounds;
+          var pl = pastedLayer.bounds;
+
+          var blW = bl[2] - bl[0];
+          var blH = bl[3] - bl[1];
+          var plW = pl[2] - pl[0];
+          var plH = pl[3] - pl[1];
+
+          var scale = Math.max(blW / plW, blH / plH);
+          pastedLayer.resize(scale * 100, scale * 100);
+
+          // Center the pasted image
+          var blX = (bl[0] + bl[2]) / 2;
+          var blY = (bl[1] + bl[3]) / 2;
+
+          pl = pastedLayer.bounds; // refresh bounds after resize
+          var plX = (pl[0] + pl[2]) / 2;
+          var plY = (pl[1] + pl[3]) / 2;
+
+          // Compute offset needed to center
+          var dx = blX - plX;
+          var dy = blY - plY;
+          pastedLayer.translate(dx, dy);
+
+          // Move above bottom layer
+          pastedLayer.move(bottomLayer, ElementPlacement.PLACEBEFORE);
+
+          console.log("Image moved!");
+      `);
+      await waitForDone(1);
+      await delay(2000);
+      console.log("[Wrapper] Placed image! Continuing...");
+
+      // Export poster:
+      console.log("[Wrapper] Exporting...");
+      ppWindow.postMessage(`app.activeDocument.saveToOE("png");`, "*");
+
+
+
+    }
+
+    runScript();
+  </script>
+</body>
+
 </html>
