--- a/backend/public/photopea-wrapper.html
+++ b/backend/public/photopea-wrapper.html
@@ -242,6 +242,11 @@ while(q.length){
 if (q[0].layers.length > 0) {
   for (var i = q[0].layers.length - 1; i >= 0; i--) {
     console.log(q[0].layers[i].name);
+    if (q[0].layers[i].name.startsWith("user_uploads")) {
+            newLayer = q[0].layers[i];
+            console.log("New layer found:", newLayer.name);
+            break;
+          }
     if (q[0].layers[i].name === "VAR_TEXTS") {
       if (q[0].layers[i].layers.length > 0) {
         for (var j = 0; j < q[0].layers[i].layers.length - 1; j++) {
