--- a/backend/public/photopea-wrapper.html
+++ b/backend/public/photopea-wrapper.html
@@ -170,7 +170,7 @@ while(q.length){
 
 
       description = description.trim();
-      // console.log("Trimmed description: " + description); // For testing
+      console.log("Trimmed description: " + description); // For testing
 
       // If desciption is set, assume that psd has desciption layer visible and ready to be updated
       if (description != "Unknown make/model" || description != "") {
